# zkm-inventory

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  RELAY_LOG.md  REVIEW_ME.md  ROADMAP.md  TODO.md  conftest.py  convert.py  finddump.py  plugin.yaml  pyproject.toml
docs/: cataloguing-a-drive.md  fable-session-review-2026-07-11.md  inv3-lane-c-design.md
features/: inventory.feature
scripts/: pilot-drive-count.sh
tests/: test_finddump.py  test_inventory.py
tests/fixtures/: inventory.yaml
